--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,12 @@
 # 语音对话系统依赖
 
 # PyTorch
-torch>=2.0.0
-torchaudio>=2.0.0
+torch>=2.9.0
+torchaudio>=2.9.0
 
 # 语音识别 (ASR)
 openai-whisper>=20231117
+faster-whisper>=1.0.0      # 加速版Whisper，速度提升4倍
 
 # 语音合成 (TTS)
 edge-tts>=6.1.9
@@ -14,6 +15,7 @@ edge-tts>=6.1.9
 sounddevice>=0.4.6
 soundfile>=0.12.1
 numpy>=1.24.0
+librosa>=0.10.0            # 音频重采样
 
 # 对话模型
 openai>=1.0.0
@@ -23,3 +25,13 @@ gradio>=4.0.0
 
 # 配置
 pyyaml>=6.0
+
+# 模型下载加速
+huggingface_hub>=0.20.0
+hf_transfer>=0.1.0         # HF加速下载（可选）
+
+# 评估测试
+datasets>=2.14.0           # Hugging Face数据集
+jiwer>=3.0.0               # WER/CER计算
+
+torchcodec
