--- a/.gitignore
+++ b/.gitignore
@@ -77,3 +77,13 @@ Thumbs.db
 
 # Gradio
 flagged/
+COMMIT_MESSAGE.md
+EVALUATION_FILES_CHECKLIST.md
+EVALUATION_IMPLEMENTATION_SUMMARY.md
+EVALUATION_QUICKSTART.md
+FINAL_SUMMARY_CN.md
+IMPLEMENTATION_CHECKLIST.md
+MODEL_EVALUATION_GUIDE.md
+PROJECT_STRUCTURE.md
+set_env_permanent.ps1
+set_env.ps1
