--- a/.gitignore
+++ b/.gitignore
@@ -87,3 +87,11 @@ MODEL_EVALUATION_GUIDE.md
 PROJECT_STRUCTURE.md
 set_env_permanent.ps1
 set_env.ps1
+AI_HOBBYIST_TTS_API.md
+CHANGELOG_REALTIME.md
+IMPLEMENTATION_SUMMARY.md
+MODE_COMPARISON.md
+REALTIME_IMPLEMENTATION_CHECKLIST.md
+REALTIME_MODE_GUIDE.md
+REALTIME_QUICK_REF.md
+src/dialogue/README_compare_models.md
